--- a/css/equipe.css
+++ b/css/equipe.css
@@ -87,5 +87,14 @@ section.equipe .box-item p:after {
     position: relative;
     display: block;
     width: 30%;
-    margin: 0 auto;;
+    margin: 0 auto;
+}
+
+
+@media screen and (max-width: 780px){
+    section.equipe .wrap {
+        width: 100%;
+        display: block;
+        margin-bottom: 7%;
+    }
 }
